[package]
name = "txpool-exex"
version = "0.1.0"
edition = "2021"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" } # Reth
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" } # Execution Extensions
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" } # Ethereum Node implementation
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" } # Logging
eyre = "0.6" # Easy error handling

reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0-rc.1" }

enr = { version = "=0.12.0", default-features = false, features = [
    "k256",
    "rust-secp256k1",
] }

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
